refactor: agregar custom exception y usar toList